--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,5 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+/.idea/jarRepositories.xml
+/.idea/compiler.xml
