--- a/timetablelayout/build.gradle
+++ b/timetablelayout/build.gradle
@@ -28,6 +28,7 @@ dependencies {
   implementation 'androidx.appcompat:appcompat:1.1.0-alpha03'
   implementation "androidx.core:core-ktx:1.0.1"
   implementation "com.google.android.material:material:1.1.0-alpha04"
+  implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
 
   testImplementation 'junit:junit:4.12'
   androidTestImplementation 'androidx.test:runner:1.1.1'
